Inserito titolo, bootstrap icon, vuejs

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-
+    <!-- collegamento a Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- collegamento al CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Booltsapp</title>
 
   </head>
   <body>
 
   </body>
-
+  <!-- collegamento a VueJS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.10/vue.min.js" 
+   integrity="sha512-H8u5mlZT1FD7MRlnUsODppkKyk+VEiCmncej8yZW1k/wUT90OQon0F9DSf/2Qh+7L/5UHd+xTLrMszjHEZc2BA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  </script>
   <!-- collegamento a JavaScript -->
   <script type="text/javascript" src="js/script.js"></script>
 </html>
