Aggiunta classi e schematizzazione pagina

--- a/index.html
+++ b/index.html
@@ -11,11 +11,51 @@
     <title>Booltsapp</title>
 
   </head>
-  <body>
+  <body class="c-green">
     <!-- 
-      ICON:
-      <i class="bi bi-chat-left-fill"></i>
-    -->
+    <i class="fas fa-bell-slash"></i>
+    <i class="fas fa-circle-notch"></i>
+    <i class="fas fa-comment-alt"></i>
+    <i class="fas fa-ellipsis-v"></i>
+    <i class="fas fa-search"></i>
+    <i class="fas fa-paperclip"></i>
+    <i class="fas fa-smile"></i>
+    <i class="fas fa-microphone"></i>
+   -->
+   <div class="web-app-container c-white flex">
+
+    <!-- ******** CONTACTS ******** -->
+    <div class="contacts c-red">contacts
+      <div class="logged-user">
+        logged-user
+        <div class="active-profile"></div>
+        <div class="top-grey-buttons"></div>
+      </div>
+      <div class="notification">
+        notification
+      </div>
+      <div class="search">
+        search
+      </div>
+      <div class="contacts-list">
+        contacts-list
+      </div>
+    </div>
+
+    <!-- ******** CHAT ******** -->
+    <div class="chat c-blue grow">chat
+      <div class="selected-contact">
+        <div class="contact"></div>
+        <div class="top-grey-buttons"></div>
+      </div>
+      <div class="message-area">
+
+      </div>
+      <div class="message-input-area">
+        
+      </div>
+    </div>
+   </div>
   </body>
   <!-- collegamento a VueJS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.10/vue.min.js" 
