--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
         </div>
       </div>
       <div class="notification">
-        notification
+        <span>
+          <i class="fas fa-bell-slash"></i>
+        </span>
+        <div>
+          <div>Ricevi notifiche di nuovi messaggi</div>
+          <div><u>Attiva notifiche desktop</u></div>
+        </div>
+        
       </div>
       <div class="search">
         search
