Aggiunto notification text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <span>
           <i class="fas fa-bell-slash"></i>
         </span>
-        <div>
+        <div class="notification-text">
           <div>Ricevi notifiche di nuovi messaggi</div>
           <div><u>Attiva notifiche desktop</u></div>
         </div>
