--- a/index.html
+++ b/index.html
@@ -92,16 +92,10 @@
       </div>
       <div class="message-area">
       
-        <div class="msg green-user">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum repellendus facere deleniti, minima totam modi odit nesciunt ratione molestiae sed sint cum a quibusdam nisi? Voluptatibus commodi voluptatum veritatis tempore.</p>
-          <div class="tiny-grey">15:30</div>
+        <div v-for="contact in contacts[activeIndex].messages" class="msg" :class="contact.status === 'sent' ? 'green-user' : 'white-user'">
+          <p>{{ contact.message }}</p>
+          <div class="tiny-grey">{{ contact.date }}</div>
         </div>
-
-        <div v-for="" class="msg white-user">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nisi excepturi in provident. Tempora corporis voluptatum eaque delectus voluptatibus rem distinctio consectetur numquam debitis a beatae adipisci iusto, mollitia recusandae?</p>
-          <div class="tiny-grey">15:30</div>
-        </div>
-
 
       </div>
       <div class="message-input-area">
