--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         
       </div>
       <div class="search">
-        <button><i class="fas fa-search"></i></button>
-        <input type="text" placeholder="Cerca o inizia una nuova chat">
+        <button @click="startSearch()"><i class="fas fa-search"></i></button>
+        <input type="text" placeholder="Cerca o inizia una nuova chat" v-model="userToSearch" @KeyUp="startSearch()">
       </div>
       <div class="contacts-list">
         <!--  LISTA DEI CONTATTI  -->
-        <div v-for="(contact, index) in contacts" class="contact" :class="contact.activeContact === true ? ' evidenced_contact' : '' " @click="setActiveContact(index)">
+        <div v-for="(contact, index) in contacts" class="contact" :class="contact.activeContact === true ? ' evidenced_contact' : '' " @click="setActiveContact(index)" v-if="contact.visible === true">
           <div class="profile-image">
             <img :src="'img/avatar' + contact.avatar + '.jpg'" :alt="contact.name">
           </div>
